clusters/vollminlab-cluster/flux-system/capacitor/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor-ingress
  namespace: flux-system
  labels:
    app: capacitor
    env: production
    category: core
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Capacitor"
    gethomepage.dev/description: "Flux GitOps dashboard"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "flux-cd.png"
    gethomepage.dev/pod-selector: "app=capacitor"
    shlink.vollminlab.com/slug: capacitor
spec:
  ingressClassName: nginx
  rules:
    - host: capacitor.vollminlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
  tls:
    - hosts:
        - capacitor.vollminlab.com
      secretName: wildcard-tls
